--- a/src/app/pages/work/work.component.scss
+++ b/src/app/pages/work/work.component.scss
@@ -73,12 +73,14 @@ $border: rgba(255, 255, 255, 0.15);
   will-change: transform, opacity;
 
   @media (max-width: 1024px) {
-    flex: 0 0 15%;
+    flex: 0 0 auto;
+    height: auto;
     width: 100%;
     border-right: none;
     border-bottom: 1px solid $border;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+    padding-bottom: 30px; /* Add some space between the title and the bottom border */
   }
 }
 
